# AutoLeaderboard

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml
src/: main.cpp
